# cpp_day_4

./: a
answers/class/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  MateriaSource.cpp  MateriaSource.hpp
docs/: abstract.html  abstract.md  polymorphism.css  polymorphism.html  polymorphism.js  polymorphism.md  subject.md  virtual.md
ex00/: CMakeLists.txt  Makefile  main.cpp
ex00/src/class/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Wanimal.cpp  Wanimal.hpp  Wcat.cpp  Wcat.hpp
ex00/test/: AnimalTest.cpp  CatTest.cpp
ex00/test/class/: AnimalTest.cpp  CatTest.cpp  DogTest.cpp
ex01/: CMakeLists.txt  Makefile  main.cpp
ex01/src/class/: Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp
ex01/test/: CatTest.cpp
ex01/test/class/: BrainTest.cpp  CatTest.cpp  DogTest.cpp
ex02/: CMakeLists.txt  Makefile  main.cpp
ex02/src/class/: Animal.cpp  Animal.hpp  Brain.hpp  Cat.cpp  Dog.cpp  Dog.hpp
ex02/test/class/: AnimalTest.cpp  BrainTest.cpp
ex03/: CMakeLists.txt  Makefile  main.c  main.cpp
ex03/.bak/: Makefile.bak
ex03/assets/: Untitled-2025-04-14-0921.excalidraw
ex03/src/class/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  MateriaSource.cpp  MateriaSource.hpp
ex03/test/class/: AMateriaTest.cpp  CharacterTest.cpp  CureTest.cpp  IceTest.cpp  MateriaSourceTest.cpp
